Completed P2ptransfers and also did some bits of ui

--- a/apps/user-app/app/globals.css
+++ b/apps/user-app/app/globals.css
@@ -1,3 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@keyframes bounce-more {
+	0%,
+	100% {
+		transform: translateY(0);
+	}
+	50% {
+		transform: translateY(-50px); /* Increased bounce height */
+	}
+}
+
+.animate-bounce-more {
+	animation: bounce-more 2s infinite; /* Faster bounce */
+}
